@@ -901,6 +901,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #6466: now distutils.cygwinccompiler and distutils.emxccompiler
+  uses the same refactored function to get gcc/ld/dllwrap versions numbers.
+  It's `distutils.util.get_compiler_versions`. Added deprecation warnings
+  for the obsolete get_versions() functions.
+
 - Issue #6459: distutils.command.build_ext.get_export_symbols now uses the
   "PyInit" prefix, rather than "init".
 
